brat/test/golden/error/kbadvec3.brat.golden
Error in test/golden/error/kbadvec3.brat@FC {start = Pos {line = 2, col = 19}, end = Pos {line = 2, col = 31}}:
constNil = { b => cons(1, nil) }
                  ^^^^^^^^^^^^

  Expected vector of length 0
from the type:  Vec(Bool, 0)
but got vector: [1]
of length (> 0)


